# solana-program-examples

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  biome.jsonc  package.json  pnpm-lock.yaml
.github/workflows/: anchor.yml  native.yml  pinocchio.yml  quasar.yml  rust.yml  solana-native.yml  solana-pinocchio.yml  typescript.yml
basics/account-data/quasar/: Cargo.toml
basics/account-data/quasar/src/: lib.rs  state.rs  tests.rs
basics/account-data/quasar/src/instructions/: create.rs
basics/checking-accounts/quasar/: Cargo.toml
basics/checking-accounts/quasar/src/: lib.rs
basics/checking-accounts/quasar/src/instructions/: check_accounts.rs
basics/close-account/quasar/: Cargo.toml
basics/close-account/quasar/src/: lib.rs  state.rs  tests.rs
basics/close-account/quasar/src/instructions/: close_user.rs  create_user.rs
basics/counter/quasar/: Cargo.toml
basics/counter/quasar/src/: lib.rs  state.rs
basics/counter/quasar/src/instructions/: increment.rs  initialize_counter.rs
basics/create-account/quasar/: Cargo.toml
basics/create-account/quasar/src/: lib.rs
basics/create-account/quasar/src/instructions/: create_system_account.rs
basics/cross-program-invocation/quasar/hand/: Cargo.toml  Quasar.toml
basics/cross-program-invocation/quasar/hand/src/: lib.rs
basics/cross-program-invocation/quasar/lever/: Cargo.toml  Quasar.toml
basics/cross-program-invocation/quasar/lever/src/: lib.rs  state.rs
basics/favorites/quasar/: Cargo.toml
basics/favorites/quasar/src/: lib.rs  state.rs  tests.rs
basics/favorites/quasar/src/instructions/: set_favorites.rs
basics/hello-solana/quasar/: Cargo.toml
basics/hello-solana/quasar/src/: lib.rs
basics/hello-solana/quasar/src/instructions/: hello.rs
basics/pda-rent-payer/quasar/: Cargo.toml
basics/pda-rent-payer/quasar/src/: lib.rs
basics/pda-rent-payer/quasar/src/instructions/: create_new_account.rs  init_rent_vault.rs
basics/processing-instructions/quasar/: Cargo.toml
basics/processing-instructions/quasar/src/: lib.rs
basics/program-derived-addresses/quasar/: Cargo.toml
basics/program-derived-addresses/quasar/src/: lib.rs
basics/realloc/quasar/: Cargo.toml
basics/realloc/quasar/src/: lib.rs  state.rs  tests.rs
basics/rent/quasar/: Cargo.toml
basics/rent/quasar/src/: lib.rs  tests.rs
basics/rent/quasar/src/instructions/: create_system_account.rs
basics/repository-layout/quasar/: Cargo.toml
basics/repository-layout/quasar/src/: lib.rs  tests.rs
basics/transfer-sol/quasar/: Cargo.toml
basics/transfer-sol/quasar/src/: lib.rs
compression/cnft-burn/quasar/: Cargo.toml
compression/cnft-burn/quasar/src/: lib.rs
compression/cnft-vault/quasar/: Cargo.toml
compression/cnft-vault/quasar/src/: lib.rs
compression/cutils/quasar/: Cargo.toml
compression/cutils/quasar/src/: lib.rs
defi/asset-leasing/: README.md
defi/asset-leasing/anchor/: Anchor.toml  Cargo.toml  README.md
defi/asset-leasing/anchor/programs/asset-leasing/: Cargo.toml
defi/asset-leasing/anchor/programs/asset-leasing/src/: constants.rs  errors.rs  lib.rs  state.rs
defi/asset-leasing/anchor/programs/asset-leasing/src/instructions/: claim_expired.rs  close_expired.rs  collect_fees.rs  create_lease.rs  delist_asset.rs  initialize.rs  liquidate.rs  list_asset.rs  mod.rs  pay_lease_fee.rs  rent_asset.rs  return_asset.rs  return_lease.rs  shared.rs  take_lease.rs  top_up_collateral.rs
defi/asset-leasing/anchor/programs/asset-leasing/src/state/: lease.rs
defi/asset-leasing/anchor/programs/asset-leasing/tests/: test.rs  test_asset_leasing.rs
defi/asset-leasing/anchor/tests-rs/: test.rs
defi/asset-leasing/quasar/: Cargo.toml  Quasar.toml
defi/asset-leasing/quasar/src/: constants.rs  errors.rs  lib.rs  state.rs  tests.rs
defi/asset-leasing/quasar/src/instructions/: close_expired.rs  create_lease.rs  liquidate.rs  mod.rs  pay_lease_fee.rs  pay_rent.rs  return_lease.rs  take_lease.rs  top_up_collateral.rs
oracles/pyth/quasar/: Cargo.toml
oracles/pyth/quasar/src/: lib.rs
oracles/pyth/quasar/src/instructions/: read_price.rs
tokens/create-token/quasar/: Cargo.toml
tokens/create-token/quasar/src/: lib.rs
tokens/escrow/quasar/: Cargo.toml
tokens/escrow/quasar/src/: lib.rs  state.rs
tokens/external-delegate-token-master/quasar/: Cargo.toml
tokens/external-delegate-token-master/quasar/src/: lib.rs
tokens/nft-minter/quasar/: Cargo.toml
tokens/nft-minter/quasar/src/: lib.rs
tokens/nft-operations/quasar/: Cargo.toml
tokens/nft-operations/quasar/src/: lib.rs
tokens/pda-mint-authority/quasar/: Cargo.toml
tokens/pda-mint-authority/quasar/src/: lib.rs  tests.rs
tokens/spl-token-minter/quasar/: Cargo.toml
tokens/spl-token-minter/quasar/src/: lib.rs
tokens/token-extensions/basics/quasar/: Cargo.toml
tokens/token-extensions/cpi-guard/quasar/: Cargo.toml
tokens/token-extensions/default-account-state/quasar/: Cargo.toml
tokens/token-extensions/group/quasar/: Cargo.toml
tokens/token-extensions/immutable-owner/quasar/: Cargo.toml
tokens/token-extensions/interest-bearing/quasar/: Cargo.toml
tokens/token-extensions/memo-transfer/quasar/: Cargo.toml
tokens/token-extensions/mint-close-authority/quasar/: Cargo.toml
tokens/token-extensions/non-transferable/quasar/: Cargo.toml
tokens/token-extensions/permanent-delegate/quasar/: Cargo.toml
tokens/token-extensions/transfer-fee/quasar/: Cargo.toml
tokens/token-extensions/transfer-hook/allow-block-list-token/quasar/: Cargo.toml
tokens/token-extensions/transfer-hook/allow-block-list-token/quasar/src/: lib.rs
tokens/token-extensions/transfer-hook/allow-block-list-token/quasar/src/instructions/: attach_to_mint.rs  change_mode.rs  init_config.rs  init_mint.rs  init_wallet.rs  remove_wallet.rs  tx_hook.rs
tokens/token-fundraiser/anchor/: readme.MD
tokens/token-fundraiser/quasar/: Cargo.toml
tokens/token-fundraiser/quasar/src/: lib.rs  state.rs
tokens/token-swap/quasar/: Cargo.toml
tokens/token-swap/quasar/src/: lib.rs
tokens/transfer-tokens/quasar/: Cargo.toml
tokens/transfer-tokens/quasar/src/: lib.rs
(+216 files in other folders)
