[workspace]
# Local workspace — the repo root Cargo.toml does not include Anchor projects,
# each Anchor example ships its own workspace plus Cargo.lock.
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
