[package]
name = "quasar-asset-leasing"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree from the Anchor
# projects, so it must declare its own [workspace] root.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
# `cdylib` for the onchain .so; `lib` so `cargo test` can link the Rust
# code as a regular library and exercise handlers against QuasarSvm.
crate-type = ["cdylib", "lib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = "0.0"
quasar-spl = "0.0"
solana-address = { version = "2.2.0" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { version = "0.1" }
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.1.0" }
