[package]
name = "asset-leasing"
version = "0.1.0"
description = "Token leasing protocol — rent/lease SPL tokens and NFTs for a fixed duration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_leasing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
litesvm = "0.11.0"
solana-kite = "0.3.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-instruction = "3.0.0"
solana-native-token = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
