[package]
name = "quasar-abl-token"
version = "0.1.0"
edition = "2021"

[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[lib]
crate-type = ["cdylib", "lib"]

[features]
alloc = ["quasar-lang/alloc"]
client = []
debug = []

[dependencies]
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
quasar-spl = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { version = "0.1" }
